cmake_minimum_required(VERSION 3.15)
project(wk3hw)

set(CMAKE_CXX_STANDARD 14)

set(Q1_src sn2890_hw3_q1.cpp)
add_executable(Q1 ${Q1_src})

set(Q2_src sn2890_hw3_q2.cpp)
add_executable(Q2 ${Q2_src})

set(Q3_src sn2890_hw3_q3.cpp)
add_executable(Q3 ${Q3_src})

set(Q4_src sn2890_hw3_q4.cpp)
add_executable(Q4 ${Q4_src})

set(Q5_src sn2890_hw3_q5.cpp)
add_executable(Q5 ${Q5_src})

set(Q6_src sn2890_hw3_q6.cpp)
add_executable(Q6 ${Q6_src})